infrastructure/configs/network-policies/flux-system.yaml
# Flux: controllers talk to each other (artifacts from source-controller, events to
# notification-controller), to the API server, and fetch git repositories, Helm charts and
# dashboards over HTTPS.
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux
  namespace: flux-system
spec:
  endpointSelector: {}
  enableDefaultDeny: { ingress: true, egress: true }
  ingress:
    - fromEndpoints:
        - {}                              # the other Flux controllers
      toPorts: [{ ports: [{ port: "9090", protocol: TCP }] }]
    - fromEndpoints:
        - matchLabels: { k8s:io.kubernetes.pod.namespace: monitoring, app.kubernetes.io/name: alloy }
      toPorts: [{ ports: [{ port: "8080", protocol: TCP }] }]
  egress:
    - toEndpoints:
        - matchLabels: { k8s:io.kubernetes.pod.namespace: kube-system, k8s-app: kube-dns }
      toPorts:
        - ports: [{ port: "53", protocol: ANY }]
          rules: { dns: [{ matchPattern: "*" }] }
    - toEntities: [kube-apiserver]
      toPorts: [{ ports: [{ port: "6443", protocol: TCP }] }]
    - toEndpoints:
        - {}
      toPorts: [{ ports: [{ port: "9090", protocol: TCP }] }]
    - toEntities: [world]
      toPorts: [{ ports: [{ port: "443", protocol: TCP }] }]
