infrastructure/configs/network-policies/vault-config-operator.yaml
# vault-config-operator: webhook called by the API server; configures OpenBao.
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vault-config-operator
  namespace: vault-config-operator
spec:
  endpointSelector: {}
  enableDefaultDeny: { ingress: true, egress: true }
  ingress:
    # Admission webhook, called by the API server (from the server node: host or remote-node).
    - fromEntities: [kube-apiserver]
      toPorts: [{ ports: [{ port: "9443", protocol: TCP }] }]
  egress:
    - toEndpoints:
        - matchLabels: { k8s:io.kubernetes.pod.namespace: kube-system, k8s-app: kube-dns }
      toPorts:
        - ports: [{ port: "53", protocol: ANY }]
          rules: { dns: [{ matchPattern: "*" }] }
    - toEntities: [kube-apiserver]
      toPorts: [{ ports: [{ port: "6443", protocol: TCP }] }]
    - toEndpoints:
        - matchLabels: { k8s:io.kubernetes.pod.namespace: openbao, app.kubernetes.io/name: openbao }
      toPorts: [{ ports: [{ port: "8200", protocol: TCP }] }]
